use url slug to navigation;

--- a/src/Dotnet9.WebAPI/Dotnet9.Core/InitData/customconfigitem.json
+++ b/src/Dotnet9.WebAPI/Dotnet9.Core/InitData/customconfigitem.json
@@ -11,7 +11,7 @@
   {
     "Id": 60182392004613,
     "ConfigId": 52422632574981,
-    "Json": "{\"Logo\":null,\"Favicon\":\"https://oss.37czone.com/oss//2023/06/20/57043MlW7w.png\",\"IsRewards\":true,\"AliPay\":\"https://oss.37czone.com/oss//2023/06/27/3z7O3wRdko.png\",\"WxPay\":\"https://oss.37czone.com/oss//2023/06/27/AYoqEgO3KM.png\",\"IsAllowMessage\":true,\"IsAllowComments\":true,\"Announcement\":\"新版本博客正式上线！！！\",\"SiteName\":\"沙漠尽头的狼\",\"Motto\":\"为遇一人而入红尘，人去我亦去，此生不留尘。 --魔道祖师\",\"RunTime\":\"2023-06-01 00:00:00\",\"VisitorNumbers\":536,\"Copyright\":\"© 2018 沙漠尽头的狼-博客\",\"Description\":\"37℃空间是一个开源个人博客网站，主要记录个人学习笔记以及资源分享\",\"Keyword\":\"37c空间,37度空间,37czone,37cblog,37度,37c博客,37度博客,37博客,可乐不加冰,.net core,sqlsugar,开源\",\"Filing\":\"鄂ICP备2020020251号-2\"}",
+    "Json": "{\"Logo\":null,\"Favicon\":\"https://oss.37czone.com/oss//2023/06/20/57043MlW7w.png\",\"IsRewards\":true,\"AliPay\":\"https://oss.37czone.com/oss//2023/06/27/3z7O3wRdko.png\",\"WxPay\":\"https://oss.37czone.com/oss//2023/06/27/AYoqEgO3KM.png\",\"IsAllowMessage\":true,\"IsAllowComments\":true,\"Announcement\":\"新版本博客正式上线！！！\",\"SiteName\":\"沙漠尽头的狼\",\"Motto\":\"为遇一人而入红尘，人去我亦去，此生不留尘。 --魔道祖师\",\"RunTime\":\"2019-11-12 00:00:00\",\"VisitorNumbers\":536,\"Copyright\":\"© 2019~2023 https://dotnet9.com & 沙漠尽头的狼，由 .NET 8.0 强力驱动\",\"Description\":\"37℃空间是一个开源个人博客网站，主要记录个人学习笔记以及资源分享\",\"Keyword\":\"37c空间,37度空间,37czone,37cblog,37度,37c博客,37度博客,37博客,可乐不加冰,.net core,sqlsugar,开源\",\"Filing\":\"蜀ICP备19038256号-1\"}",
     "Status": "0",
     "CreatedUserId": "1",
     "DeleteMark": "0",
