--- a/src/Dotnet9.WebAPI/Dotnet9.Web.Entry/Dotnet9.Web.Entry.csproj
+++ b/src/Dotnet9.WebAPI/Dotnet9.Web.Entry/Dotnet9.Web.Entry.csproj
@@ -9,6 +9,7 @@
 		<PublishReadyToRunComposite>true</PublishReadyToRunComposite>
 		<UserSecretsId>dbe8130a-ff52-4e0b-97b7-1cd416d74122</UserSecretsId>
 		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 
