--- a/src/Dotnet9.WebAPI/Dotnet9.Application/Dotnet9.Application.csproj
+++ b/src/Dotnet9.WebAPI/Dotnet9.Application/Dotnet9.Application.csproj
@@ -7,6 +7,7 @@
 		<NoWarn>1701;1702;1591</NoWarn>
 		<DocumentationFile>Dotnet9.Application.xml</DocumentationFile>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 
