--- a/src/Dotnet9.WebAPI/Dotnet9.Core/Dotnet9.Core.csproj
+++ b/src/Dotnet9.WebAPI/Dotnet9.Core/Dotnet9.Core.csproj
@@ -4,12 +4,13 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<NoWarn>1701;1702;1591;8632</NoWarn>
 		<DocumentationFile>Dotnet9.Core.xml</DocumentationFile>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="AspNetCoreRateLimit" Version="5.0.0" />
-		<PackageReference Include="EasyCaching.CSRedis" Version="1.9.1" />
-		<PackageReference Include="EasyCaching.InMemory" Version="1.9.1" />
+		<PackageReference Include="EasyCaching.CSRedis" Version="1.9.2" />
+		<PackageReference Include="EasyCaching.InMemory" Version="1.9.2" />
 		<PackageReference Include="Furion.Extras.Authentication.JwtBearer" Version="4.8.8.50" />
 		<PackageReference Include="Furion.Extras.ObjectMapper.Mapster" Version="4.8.8.50" />
 		<PackageReference Include="Furion.Pure" Version="4.8.8.50" />
@@ -18,7 +19,7 @@
 		<PackageReference Include="MrHuo.OAuth.QQ" Version="1.1.1" />
 		<PackageReference Include="OnceMi.AspNetCore.OSS" Version="1.2.0" />
 		<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.6" />
-		<PackageReference Include="SqlSugarCore" Version="5.1.4.113-preview27" />
+		<PackageReference Include="SqlSugarCore" Version="5.1.4.113-preview31" />
 		<PackageReference Include="UAParser" Version="3.1.47" />
 		<PackageReference Include="Yitter.IdGenerator" Version="1.0.14" />
 	</ItemGroup>
