--- a/src/Dotnet9.WebAPI/Dotnet9.Web.Core/Dotnet9.Web.Core.csproj
+++ b/src/Dotnet9.WebAPI/Dotnet9.Web.Core/Dotnet9.Web.Core.csproj
@@ -6,6 +6,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<NoWarn>1701;1702;1591</NoWarn>
 		<DocumentationFile>Dotnet9.Web.Core.xml</DocumentationFile>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 
@@ -15,7 +16,7 @@
 
 
 	<ItemGroup>
-	  <PackageReference Include="EasyCaching.Serialization.Json" Version="1.9.1" />
+	  <PackageReference Include="EasyCaching.Serialization.Json" Version="1.9.2" />
 	</ItemGroup>
 
 	<ItemGroup>
