--- a/src/Dotnet9.WebAPI/Dotnet9.Application/Dotnet9.Application.csproj
+++ b/src/Dotnet9.WebAPI/Dotnet9.Application/Dotnet9.Application.csproj
@@ -14,6 +14,7 @@
 	<ItemGroup>
 		<None Remove="applicationsettings.Development.json" />
 		<None Remove="applicationsettings.json" />
+		<None Remove="applicationsettings.Production.json" />
 		<None Remove="Dotnet9.Application.xml" />
 	</ItemGroup>
 
@@ -23,6 +24,9 @@
 		</Content>
 		<Content Include="applicationsettings.json">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+		<Content Include="applicationsettings.Production.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
 
@@ -38,5 +42,4 @@
 		<Folder Include="Menu\Dtos\" />
 		<Folder Include="Organization\Dtos\" />
 	</ItemGroup>
-
 </Project>
