--- a/src/Dotnet9.WebAPI/Dotnet9.Core/Dotnet9.Core.csproj
+++ b/src/Dotnet9.WebAPI/Dotnet9.Core/Dotnet9.Core.csproj
@@ -19,7 +19,7 @@
 		<PackageReference Include="MrHuo.OAuth.QQ" Version="1.1.1" />
 		<PackageReference Include="OnceMi.AspNetCore.OSS" Version="1.2.0" />
 		<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="2.88.6" />
-		<PackageReference Include="SqlSugarCore" Version="5.1.4.114-preview01" />
+		<PackageReference Include="SqlSugarCore" Version="5.1.4.114" />
 		<PackageReference Include="UAParser" Version="3.1.47" />
 		<PackageReference Include="Yitter.IdGenerator" Version="1.0.14" />
 	</ItemGroup>
@@ -55,6 +55,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NETCore.Targets" Version="3.0.0" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.NETCore.Targets" Version="6.0.0-preview.4.21253.7" PrivateAssets="all" />
 	</ItemGroup>
 </Project>
