--- a/src/Dotnet9.WebAPI/Dotnet9.Core/InitData/customconfigitem.json
+++ b/src/Dotnet9.WebAPI/Dotnet9.Core/InitData/customconfigitem.json
@@ -2,7 +2,7 @@
   {
     "Id": 58886819397637,
     "ConfigId": 58883053432837,
-    "Json": "{\"Avatar\":\"https://img1.dotnet9.com/site/logo.png\",\"NikeName\":\"沙漠尽头的狼\",\"QQ\":\"632871194\",\"Github\":\"https://github.com/\",\"Gitee\":\"https://gitee.com/miss_you\",\"Motto\":\"时间如流水，只能流去不流回。\",\"About\":\"<h1>博客</h1><p><span style=\\\"color: rgb(68, 68, 68);\\\">博客是一个由.NET开发的个人博客网站，诞生于2023年06月01日儿童节，前端页面使用Vue3 + Ts。个人博客基本功能已经实现，后续将会继续完善功能和页面的优化！</span></p><p><br></p><h1>个人信息</h1><p><span style=\\\"color: rgb(68, 68, 68);\\\">这个人很懒，什么也没有留下....</span></p><p><br></p><h1>个人介绍</h1><p><span style=\\\"color: rgb(68, 68, 68);\\\">性别：男，爱好：女（O(∩_∩)O哈哈~）</span></p><p><br></p><h1>未来</h1><p><span style=\\\"color: rgb(68, 68, 68);\\\">先挣它一个亿再说...</span></p>\"}",
+    "Json": "{\"Avatar\":\"https://img1.dotnet9.com/site/logo.png\",\"NikeName\":\"沙漠尽头的狼\",\"QQ\":\"632871194\",\"Github\":\"http://github.com/dotnet9/Dotnet9\",\"Gitee\":\"https://gitee.com/dotnet9/Dotnet9\",\"Motto\":\"时间如流水，只能流去不流回。\",\"About\":\"\"}",
     "Status": "0",
     "CreatedUserId": "1",
     "DeleteMark": "0",
@@ -11,7 +11,7 @@
   {
     "Id": 60182392004613,
     "ConfigId": 52422632574981,
-    "Json": "{\"Logo\":null,\"Favicon\":\"https://img1.dotnet9.com/site/logo.png\",\"IsRewards\":true,\"AliPay\":\"https://img1.dotnet9.com/pays/AliPay.jpg\",\"WxPay\":\"https://img1.dotnet9.com/pays/WeChatPay.jpg\",\"IsAllowMessage\":true,\"IsAllowComments\":true,\"Announcement\":\"新版本博客正式上线！！！\",\"SiteName\":\"沙漠尽头的狼\",\"Motto\":\"为遇一人而入红尘，人去我亦去，此生不留尘。 --魔道祖师\",\"RunTime\":\"2019-11-12 00:00:00\",\"VisitorNumbers\":536,\"Copyright\":\"© 2019~2023 https://dotnet9.com & 沙漠尽头的狼，由 .NET 8.0 强力驱动\",\"Description\":\"37℃空间是一个开源个人博客网站，主要记录个人学习笔记以及资源分享\",\"Keyword\":\"37c空间,37度空间,37czone,37cblog,37度,37c博客,37度博客,37博客,可乐不加冰,.net core,sqlsugar,开源\",\"Filing\":\"蜀ICP备19038256号-1\"}",
+    "Json": "{\"Logo\":null,\"Favicon\":\"https://img1.dotnet9.com/site/logo.png\",\"IsRewards\":true,\"AliPay\":\"https://img1.dotnet9.com/pays/AliPay.jpg\",\"WxPay\":\"https://img1.dotnet9.com/pays/WeChatPay.jpg\",\"IsAllowMessage\":true,\"IsAllowComments\":true,\"Announcement\":\"新版本博客正式上线！！！\",\"SiteName\":\"沙漠尽头的狼\",\"Motto\":\"为遇一人而入红尘，人去我亦去，此生不留尘。 --魔道祖师\",\"RunTime\":\"2019-11-12 00:00:00\",\"VisitorNumbers\":536,\"Copyright\":\"© 2019~2023 https://dotnet9.com & 沙漠尽头的狼，由 .NET 8.0 强力驱动\",\"Description\":\"Dotnet9是一个热衷于互联网分享精神的网站\",\"Keyword\":\"Dotnet9,.NET Core,SqlSugar,开源\",\"Filing\":\"蜀ICP备19038256号-1\"}",
     "Status": "0",
     "CreatedUserId": "1",
     "DeleteMark": "0",
